# uninorm

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  Makefile  README.ko.md  README.md
.github/workflows/: ci.yml  release.yml
crates/uninorm-cli/: Cargo.toml
crates/uninorm-cli/src/: config.rs  daemon.rs  lib.rs  main.rs
crates/uninorm-core/: Cargo.toml
crates/uninorm-core/benches/: normalize.rs
crates/uninorm-core/src/: error.rs  file_ops.rs  lib.rs  normalize.rs
crates/uninorm-core/src/file_ops/: convert.rs  exclude.rs  mod.rs  scan.rs
crates/uninorm-daemon/: Cargo.toml
crates/uninorm-daemon/src/: autostart.rs  config.rs  controller.rs  daemon.rs  error.rs  lib.rs
crates/uninorm-daemon/tests/: daemon_integration.rs
docs/: cli.ko.md  cli.md
