[package]
name = "uninorm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uninorm"
path = "src/main.rs"

[dependencies]
uninorm-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
indicatif = { workspace = true }
arboard = { workspace = true }
