[package]
name = "uninorm-core"
version = "0.1.0"
edition = "2021"
description = "Core library for NFD→NFC Unicode normalization of filenames and text content"
license = "MIT"
repository = "https://github.com/uninorm/uninorm"
keywords = ["unicode", "nfc", "nfd", "normalization", "filename"]
categories = ["filesystem", "text-processing"]

[dependencies]
unicode-normalization = { workspace = true }
walkdir = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, optional = true }
globset = { workspace = true }
futures = { workspace = true }

[features]
serde = ["dep:serde"]

[target.'cfg(target_os = "macos")'.dependencies]
hfs_nfd = { workspace = true }

[dev-dependencies]
tempfile = "3"
